--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>webgrind</title>
+	<title><?php echo Webgrind_MasterConfig::$appName?></title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="js/jquery.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery.blockUI.js" type="text/javascript" charset="utf-8"></script>
@@ -51,16 +51,20 @@
 					$("#runtime_sum").html(data.summedRunTime);
 					$("#runs").html(data.runs);
 					
+					$("#breakdown").empty();
 					var breakdown_sum = data.breakdown['internal']+data.breakdown['procedural']+data.breakdown['class']+data.breakdown['include'];
-                    $("#breakdown").html(
-                        '<img src="img/gradient_left.png" height="20" width="10">'+
-                        '<img src="img/gradient_internal.png" height="20" width="'+Math.floor(data.breakdown['internal']/breakdown_sum*300)+'">'+
-                        '<img src="img/gradient_include.png" height="20" width="'+Math.floor(data.breakdown['include']/breakdown_sum*300)+'">'+
-                        '<img src="img/gradient_class.png" height="20" width="'+Math.floor(data.breakdown['class']/breakdown_sum*300)+'">'+
-                        '<img src="img/gradient_procedural.png" height="20" width="'+Math.floor(data.breakdown['procedural']/breakdown_sum*300)+'">'+
-                        '<img src="img/gradient_right.png" height="20" width="10">'+
-                        '<div title="internal functions, include/require, class methods and procedural functions." style="background:url(img/gradient_markers.png);position:relative;top:-20px;left:10px;width:301px;height:19px"></div>'
-                    );
+					var breakdown_colors = ['blue', 'silver','greenyellow', 'orange'];
+					
+					var color = breakdown_colors.shift();
+					addToBreakdown('left', 10, color);
+					$.each(data.breakdown,function(item,value){
+						addToBreakdown(item, Math.floor(value/breakdown_sum*300), color);
+						if (breakdown_colors.length>0){
+							color = breakdown_colors.shift();
+						}
+					});
+					addToBreakdown('right', 10, color);
+					$("#breakdown").append('<div title="internal functions, include/require, class methods and procedural functions." style="background:url(img/gradient_markers.png);position:relative;left:10px;width:301px;height:20px"></div>');
 					
 					$("#hello_message").hide();
 					$("#trace_view").show();
@@ -71,6 +75,37 @@
 					$('#callfilter').trigger('keyup');
 				}
 			);
+		}
+		
+		function addToBreakdown(name,size,color) {
+			var element = $('<div class = "breakdown ' + name + '" />');
+			element.css({
+				'width': size,
+				'background-color': color
+			});
+		//	element.hover(function(){
+		//		$(this).css({'background-color': colorAdd($(this).css('background-color'),50,50,50)});
+		//	},function(){
+		//		$(this).css({'background-color': color});
+		//	});
+			
+			$("#breakdown").append(element);
+	
+		}
+		// public static Color Lighten(Color inColor, double inAmount)
+		//	{
+		//	  return Color.FromArgb(
+		//		inColor.A,
+		//		(int) Math.Min(255, inColor.R + 255 * inAmount),
+		//		(int) Math.Min(255, inColor.G + 255 * inAmount),
+		//		(int) Math.Min(255, inColor.B + 255 * inAmount) );
+		//	}
+		function colorAdd(original,r,g,b) {
+			var rgbString = original; // get this in whatever way.
+
+			var parts = rgbString
+					.match(/^rgb\((\d+),\s*(\d+),\s*(\d+)\)$/);
+			return 'rgb(' + (parseInt(parts[1])+r) + ',' + (parseInt(parts[2])+g) + ',' + (parseInt(parts[3])+b) + ')';
 		}
 		
 		function reloadFilelist(){
@@ -274,8 +309,8 @@
 <body>
     <div id="head">
         <div id="logo">
-            <h1>webgrind<sup style="font-size:10px">v<?php echo Webgrind_Config::$webgrindVersion?></sup></h1>
-            <p>profiling in the browser</p>
+            <h1><?php echo Webgrind_MasterConfig::$appName?><sup style="font-size:10px">v<?php echo Webgrind_Config::$webgrindVersion?></sup></h1>
+            <p><?php echo Webgrind_MasterConfig::$appTagline?></p>
         </div>
         <div id="options">
             <form method="get" onsubmit="update();return false;">
@@ -352,7 +387,8 @@
             <?php if(Webgrind_Config::$checkVersion):?>
         	<div id="version_info">&nbsp;</div>
         	<?php endif?>
-            Copyright © 2008 Jacob Oettinger &amp; Joakim Nygård. <a href="http://code.google.com/p/webgrind/">webgrind homepage</a>
+			<?php echo Webgrind_MasterConfig::$appName?> is a modified version of webgrind by Jake Worrell<br />
+            webgrind is Copyright © 2008 Jacob Oettinger &amp; Joakim Nygård. <a href="http://code.google.com/p/webgrind/">webgrind homepage</a>
         </div>
     </div>
 </body>
