more work on breakdown bar, highlight on hover appears to be working ok, removed a load of images in favour of a transparent gradient png

--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ a.load_invocations {
 }
 
 .breakdown {
+	background-image: url('../img/gradient.png');
 	display: block;
 	height: 20px;
 	float: left;
